<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:scrollbars="none">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.speakup.MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginTop="@dimen/margin_32dp"
        android:contentDescription="@string/speakup_logo"
        android:src="@drawable/ic_microphone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_logo_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_17dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:textAllCaps="true"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/username"
        android:textAlignment="viewStart"
        android:textColor="@color/labelColor"
        android:textSize="@dimen/font_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo_title" />

    <EditText
        android:id="@+id/et_username_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:backgroundTint="@color/viewcolor"
        android:inputType="text"
        android:text="@string/username_val"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />


    <TextView
        android:id="@+id/tv_password"
        android:textAllCaps="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_17dp"
        android:text="@string/password"
        android:textAlignment="viewStart"
        android:textColor="@color/labelColor"
        android:textSize="@dimen/font_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_value" />

    <EditText
        android:id="@+id/et_password_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:backgroundTint="@color/viewcolor"
        android:inputType="textPassword"
        android:text="@string/password_val"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />


    <Button
        android:id="@+id/bn_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_22dp"
        android:background="@drawable/button_round"
        android:text="@string/signin"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_value" />

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/viewcolor"
        android:textSize="@dimen/font_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn_signin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_32dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotpassword"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/bn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register_new_user"
            android:textColor="@color/textColor" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
