<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.android.speakup.MainActivity">

        <ImageView
            android:id="@+id/iv_pin"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/margin_124dp"
            android:contentDescription="@string/speakup_logo"
            android:src="@drawable/ic_pin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="@dimen/image_width_280dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_27dp"
            android:text="Enter your registered email address to retrieve the password instruction"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_pin" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="@dimen/text_width_287dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:inputType="textEmailAddress"
            android:text="@string/username"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/labelColor"
            android:textSize="@dimen/font_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction" />

        <EditText
            android:id="@+id/et_email_value"
            android:layout_width="@dimen/text_width_287dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:backgroundTint="@color/viewcolor"
            android:text="@string/username_val"
            android:textAlignment="viewStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <Button
            android:id="@+id/bn_send"
            android:layout_width="@dimen/image_width_200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_200dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_22dp"
            android:background="@drawable/button_round"
            android:text="Send"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_value" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>